--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "type-check": "tsc"
   },
   "dependencies": {
+    "@react-google-maps/api": "^2.18.1",
+    "@types/googlemaps": "^3.43.3",
     "next": "latest",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
