--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-phone-input-2": "^2.15.1",
-    "react-phone-number-input": "^3.2.19"
+    "react-phone-number-input": "^3.2.19",
+    "use-places-autocomplete": "^4.0.0"
   },
   "devDependencies": {
     "@types/node": "^12.12.21",
